--- a/package.json
+++ b/package.json
@@ -1,11 +1,45 @@
 {
-  "name": "chatapp",
-  "version": "1.0.0",
-  "description": "Simple Chat Application",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Mahesh",
-  "license": "ISC"
+    "name": "chat-app",
+    "version": "1.0.0",
+    "description": "MERN Stack Based Chat Application",
+    "main": "server.js",
+    "scripts": {
+        "client-install": "npm install --prefix client",
+        "start": "node server.js",
+        "server": "nodemon server.js",
+        "client": "cd client && npm start",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "heroku-postbuild": "cd client && npm install npm && npm run build"
+    },
+    "engines": {
+        "node": "14.x"
+    },
+    "author": "Mahesh",
+    "license": "MIT",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "concurrently": "^5.3.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "http": "0.0.0",
+        "is-empty": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.10.9",
+        "notistack": "^1.0.3",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.1",
+        "socket.io": "^2.3.0",
+        "validator": "^11.1.0"
+    },
+    "devDependencies": {
+        "eslint": "^7.11.0",
+        "eslint-plugin-react": "^7.21.4",
+        "eslint-plugin-react-hooks": "^1.7.0",
+        "nodemon": "^2.0.5"
+    }
 }
